--- a/frontend/src/ui/styles/components/players_table.scss
+++ b/frontend/src/ui/styles/components/players_table.scss
@@ -1,12 +1,14 @@
 @use "../components/game_records_table" as grt;
 
 players-table {
+  @include grt.spanAlignment;
   @include grt.captionDecoration;
 
+  $pictureWidth: 70px;
+
   @mixin cardLegendGrid {
-    $pictureWidth: 70px;
-    $playerNameWidth: minmax(100px, 200px);
-    $playerCountriesWidth: minmax(60px, max-content);
+    $playerNameWidth: 175px;
+    $playerCountriesWidth: 40px;
     $danKyuWidth: 45px;
     $lastGameDateWidth: 100px;
     $gamesTotalWidth: 80px;
@@ -16,42 +18,17 @@ players-table {
       grt.$refWidth $pictureWidth $playerNameWidth $playerCountriesWidth
       grt.$eloWidth $danKyuWidth $lastGameDateWidth $gamesTotalWidth;
     grid-template-areas: "ref player-picture player-name countries elo dan-kyu last-game-date";
+    grid-column-gap: grt.$columnGap;
   }
 
   .player-card {
     > route-link {
       @include grt.card;
       @include cardLegendGrid;
+    }
 
-      img {
-        max-width: 65px;
-      }
-
-      .dan-kyu {
-        grid-area: dan-kyu;
-        text-align: center;
-        margin-left: -17px;
-      }
-
-      .countries {
-        grid-area: countries;
-        text-align: center;
-        margin-left: -29px;
-      }
-
-      // TODO1: For the love of god, this manual centering is
-      //        just maddening.
-      .centered {
-        text-align: center;
-      }
-
-      #picture-placeholder {
-        margin-left: -22px;
-      }
-
-      #picture {
-        margin-left: -6px;
-      }
+    img {
+      max-width: $pictureWidth;
     }
   }
 
@@ -59,14 +36,5 @@ players-table {
     @include cardLegendGrid;
     @include grt.cardPadding;
     @include grt.legendDecoration;
-
-    .centered {
-      text-align: center;
-      margin-left: 8px;
-    }
-
-    #picture {
-      margin-left: -17px;
-    }
   }
 }
