--- a/frontend/src/ui/styles/components/game_records_table.scss
+++ b/frontend/src/ui/styles/components/game_records_table.scss
@@ -42,7 +42,14 @@
 
 @mixin captionDecoration {
   h2 {
-    padding-left: 13px;
+    display: flex;
+    justify-content: center;
+
+    font-size: 1.8rem;
+
+    route-link {
+      color: darken(green, 7%);
+    }
   }
 }
 
@@ -58,6 +65,7 @@
 
 @mixin legendDecoration {
   align-items: center;
+
   font-weight: bold;
 }
 
