--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -279,6 +279,15 @@ player-view h2 {
   margin-bottom: 30px;
 }
 
+unknown-view {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  max-width: 300px;
+  font-size: 1.8rem;
+}
+
 admin-view[signed-in=false] form {
   display: grid;
   grid-template-columns: 1fr;
