more minor improvements

--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -304,7 +304,7 @@ player-view #player-personal-card .align-left {
 }
 player-view #player-personal-card #player-personal-card-content {
   display: grid;
-  grid-template-columns: 100px 100px 80px 100px;
+  grid-template-columns: 240px 60px 60px 60px 120px;
   grid-column-gap: 10px;
   margin-bottom: 35px;
   width: max-content;
@@ -334,7 +334,7 @@ player-view #player-personal-card #player-personal-card-content route-link[loser
 }
 player-view #player-personal-card #player-personal-card-legend {
   display: grid;
-  grid-template-columns: 100px 100px 80px 100px;
+  grid-template-columns: 240px 60px 60px 60px 120px;
   grid-column-gap: 10px;
   align-items: center;
   font-weight: bold;
