--- a/frontend/src/ui/styles/views/player_view.scss
+++ b/frontend/src/ui/styles/views/player_view.scss
@@ -5,29 +5,29 @@
 player-view {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100px 165px 1fr;
+  grid-template-rows: 100px 135px 1fr 1fr;
   grid-row-gap: 20px;
   grid-template-areas: "name" "metadata" "game-records";
   justify-items: center;
 
   #graph {
     display: flex;
+    flex-direction: column;
+    gap: 20px;
     justify-content: center;
     align-items: center;
 
     width: 500px;
-    height: 250px;
-    
-    margin-bottom: 30px;
-
-    background-color: whitesmoke;
+    height: 325px;
 
     canvas {
       max-width: 500px;
-      max-height: 200px;
+      max-height: 225px;
 
-      padding-left: 30px;
-      padding-right: 30px;
+      @include grt.cardDecoration;
+      background-color: whitesmoke;
+
+      padding: 15px 20px;
     }
   }
 
