--- a/frontend/src/ui/styles/views/player_view.scss
+++ b/frontend/src/ui/styles/views/player_view.scss
@@ -5,7 +5,7 @@
 player-view {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100px 135px 1fr 1fr;
+  grid-template-rows: 100px 155px 1fr 1fr;
   grid-row-gap: 20px;
   grid-template-areas: "name" "metadata" "game-records";
   justify-items: center;
@@ -47,7 +47,7 @@ player-view {
 
     @mixin cardLegendGrid {
       display: grid;
-      grid-template-columns: 240px 60px 60px 60px 120px;
+      grid-template-columns: 240px 55px 70px 60px 60px 60px 120px;
       grid-column-gap: grt.$columnGap;
     }
 
