--- a/frontend/src/ui/styles/components/game_records_table.scss
+++ b/frontend/src/ui/styles/components/game_records_table.scss
@@ -1,7 +1,3 @@
-// @mixin cardBorderDecoration {
-  
-// }
-
 @mixin cardDecoration {
   background: whitesmoke;
 
@@ -51,6 +47,8 @@
   h2 {
     display: flex;
     justify-content: center;
+    
+    margin-bottom: 15px;
 
     font-size: 1.8rem;
 
