--- a/frontend/src/ui/styles/views/player_view.scss
+++ b/frontend/src/ui/styles/views/player_view.scss
@@ -7,7 +7,7 @@ player-view {
   grid-template-columns: 1fr;
   grid-template-rows: 100px 155px 1fr 1fr;
   grid-row-gap: 20px;
-  grid-template-areas: "name" "metadata" "game-records";
+  grid-template-areas: "name" "metadata" "elo-graph" "game-records";
   justify-items: center;
 
   #graph {
@@ -20,10 +20,14 @@ player-view {
     width: 500px;
     height: 325px;
 
+    h2 {
+      font-size: 1.8rem;
+    }
+
     canvas {
       max-width: 500px;
       max-height: 225px;
-      
+
       @include grt.cardDecoration;
       background-color: whitesmoke;
 
