--- a/frontend/src/ui/styles/index.scss
+++ b/frontend/src/ui/styles/index.scss
@@ -10,6 +10,7 @@
 @use "views/home_view";
 @use "views/player_view";
 @use "views/players_view";
+@use "views/game_record_view";
 @use "views/unknown_view";
 
 @use "views/admin_view";
