--- a/frontend/src/ui/styles/views/game_record_view.scss
+++ b/frontend/src/ui/styles/views/game_record_view.scss
@@ -5,7 +5,7 @@ game-record-view {
   justify-items: center;
 
   #glift {
-    max-width: 500px;
-    max-height: 500px;
+    width: 500px;
+    height: 500px;
   }
 }
